# qgis-conflict-resolver-plugin

./: ConflictResolver.py  README.md  __init__.py  metadata.txt
cpp/: CMakeLists.txt  qgispatch.cpp  qgispatch.h
tests/: test_plugin.py
